--- a/app1/templates/app1/room.html
+++ b/app1/templates/app1/room.html
@@ -77,7 +77,7 @@
 
                                             <h6 class="text-info">{{ bookings.check_in }}</h6>
                                             <h6>tới</h6>
-                                            <h6 class="text-info"">{{ bookings.check_out }}</h6>
+                                            <h6 class="text-info">{{ bookings.check_out }}</h6>
 
                                         </div>
                                         &nbsp;
@@ -127,7 +127,7 @@
                 </div>
 
         </div>
-          
+        
     </div>
 
     <br>
