--- a/app1/templates/app1/bookedroom.html
+++ b/app1/templates/app1/bookedroom.html
@@ -8,7 +8,7 @@
     
                 <div class="row px-auto mx-auto">
                     
-                    <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style=" width: 90%; background-color: aliceblue;">
+                    <div class="container-fluid p-3 text-center rounded mx-auto px-auto shadow-lg" style=" width: 90%; background-color: aliceblue;">
     
                         {% if bookings.room.image %} 
                         <img src="{{ bookings.room.image.url }}" class="rounded shadow-lg" style="width: 200px; height: 250px; object-fit: cover;" alt="ảnh lỗi r huhu">
@@ -47,7 +47,7 @@
     
                     <div class="row">
     
-                        <div class="col-10 rounded p-2 px-auto mx-auto">
+                        <div class="col-10 rounded p-2 px-auto mx-auto rounded shadow">
                             <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="width: 99%; background-color: aliceblue;" >
                         
                             <h2>Phòng # {{ bookings.room.name }} của {{bookings.room.hotel}}</h2>
@@ -62,7 +62,7 @@
     
                     <div class="row">
     
-                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto" style="height: 370px; width: 97%; background-color: aliceblue;" >
+                        <div class="container-fluid p-3 text-center rounded mx-auto px-auto shadow-lg shadow-lg" style="height: 370px; width: 97%; background-color: aliceblue;" >
                         
                             <h4>Lịch đặt phòng</h4>
                             <hr style=" height: 3px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
@@ -91,7 +91,7 @@
                                     <div class="container rounded px-auto mx-auto text-center p-1" style="background-color: aliceblue;">
 
                                         <h6 class="text-info">Phòng chỉ hợp lệ sau khi bạn đã thanh toán</h6>
-                                        <h6 class="text-info">Sau khi thanh toán khi hủy phòng hãy liên hệ với nhân viên để hoàn lại tiền</h6>
+                                        <h6 class="text-info">Sau khi thanh toán nếu có nhu cầu hủy phòng hãy liên hệ với nhân viên để nhận hỗ trợ</h6>
 
                                     </div>
                                     &nbsp;
@@ -115,13 +115,13 @@
 
         {% if bookings.pay_status == True %}
 
-        <a href="{% url 'cancel' bookings.pk %}"><button type="submit" class="btn btn-danger btn-lg" onclick="return confirm('Bạn có chắc chắn ?');"> Hủy Phòng </button></a>
+        <a href="{% url 'cancel' bookings.pk %}"><button type="submit" class="btn btn-danger btn-lg shadow-lg" onclick="return confirm('Bạn có chắc chắn hủy phòng ?');"> Hủy Phòng </button></a>
 
         {% else %}
 
-        <a href="{% url 'cancel' bookings.pk %}"><button type="submit" class="btn btn-danger btn-lg" onclick="return confirm('Bạn có chắc chắn ?');"> Hủy Phòng </button></a>
+        <a href="{% url 'cancel' bookings.pk %}"><button type="submit" class="btn btn-danger btn-lg shadow-lg" onclick="return confirm('Bạn có chắc chắn hủy phòng ?');"> Hủy Phòng </button></a>
         &nbsp; &nbsp; 
-        <a href="{% url 'payment' bookings.pk %}"><button type="submit" class="btn btn-warning btn-lg"> Thanh Toán </button></a>
+        <a href="{% url 'payment' bookings.pk %}"><button type="submit" class="btn btn-warning btn-lg shadow-lg"> Thanh Toán </button></a>
         
         {% endif %}
 
