--- a/app1/templates/app1/navbar.html
+++ b/app1/templates/app1/navbar.html
@@ -97,7 +97,7 @@
 
         <li class="text-center">
   
-          <a class="btn btn-light btn-outline-secondary rounded-pill shadow" href="{% url 'user-logout' %}"><i class="fa-solid fa-right-from-bracket"></i></a>
+          <a class="btn btn-light btn-outline-secondary rounded-pill shadow" href="{% url 'user-logout' %}" onclick="return confirm('Bạn muốn đăng xuất ?');"><i class="fa-solid fa-right-from-bracket"></i></a>
 
         </li>
         
