--- a/app1/templates/app1/search.html
+++ b/app1/templates/app1/search.html
@@ -53,6 +53,7 @@
                             <br>
 
                             <div class="p-6 bg-white rounded-b-xl">
+                                <h5 class="hotelname">{{hotel.price_min}} <b>đ</b> - {{hotel.price_max}} <b>đ</b> </h5>
                                 <h5 class="text-2xl hotelname"><i class="fa-solid fa-star text-warning">&nbsp;</i>{{ hotel.rating_average|floatformat:1 }} <br><i class="fa-solid fa-location-dot text-info">&nbsp;</i>{{ hotel.adress }}</h5>
                             </div>
 
