--- a/app1/templates/app1/homepage.html
+++ b/app1/templates/app1/homepage.html
@@ -79,7 +79,7 @@
 
     <hr style="height: 5px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
 
-    <div class="container text-center p-5 " style="object-fit: cover;">
+    <div class="container text-center d-flex justify-content-center p-5 " style="object-fit: cover;">
         <div class="row row-cols-auto">
           <div class="col"><a href="{% url 'search' %}?query=Ha+Long" style="text-decoration: none;"><img src="https://www.planetware.com/photos-large/VIE/vietnam-halong-bay.jpg" class="rounded-circle hpcircle shadow-lg" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""><h4>Hạ Long</h4></a></div>
           <div class="col"><a href="{% url 'search' %}?query=Da+Nang" style="text-decoration: none;"><img src="https://image-en.nhandan.vn/w800/Uploaded/2023/aslxvtxwtys/2023_03_31/vietnam-2762.jpg" class="rounded-circle hpcircle shadow-lg" style="max-width: 105px; height: 105px; object-fit: cover;" alt=""><h4>Đà nẵng</h4></a></div>
@@ -117,8 +117,8 @@
 
     <div class="container-fluid p-4 rounded shadow-lg" style=" background-color: #A9A9A9;">            
 
-      <h3 class="text-white text-center"><i class="fa-solid fa-phone-volume"></i>  Hỗ trợ : Le Minh Kiet 0000000000</h3>
-      <h3 class="text-white text-center"><i class="fa-solid fa-envelope"></i> Email: LMK@yahoo.com</h3>
+      <h3 class="text-white text-center"><i class="fa-solid fa-phone-volume"></i>  Hỗ trợ : 086 694 6049</h3>
+      <h3 class="text-white text-center"><i class="fa-solid fa-envelope"></i> Email: Jhtdesu@gmail.com</h3>
 
     </div>
     
