--- a/app1/templates/app1/room.html
+++ b/app1/templates/app1/room.html
@@ -28,7 +28,7 @@
                     <br>
 
                         <h3 class="text-danger">Giá Phòng</h3>
-                        <h3>{{rooms.price}} <b class="text-warning">đ</b></h3>
+                        <h3>{{rooms.price}} <b class="text-warning">đ</b> / Ngày</h3>
 
 
 
@@ -55,6 +55,24 @@
 
                         </div>
                     
+                    </div>
+
+                </div>
+
+                <br>
+
+                <div class="row">
+
+                    <div class="container p-3 text-center rounded mx-auto px-auto shadow-lg" style="width: 97%; min-height: 200px; background-color: aliceblue;" >
+                        
+                        <h4>Mô tả</h4>
+                        <hr style=" height: 3px; border:none; color: #A9A9A9;background-color: #A9A9A9;">
+                        <div class="container rounded px-auto mx-auto p-3" style="min-height: 150px; background-color: #D9D9D9;">
+
+                            <p style="word-wrap: break-word;">{{ rooms.description }}</p>
+
+                        </div>
+                        
                     </div>
 
                 </div>
